Fixed alignment problems

--- a/styles/game-list.css
+++ b/styles/game-list.css
@@ -56,6 +56,7 @@
 }
 
 #game-categories input{
+    margin-top: 10px;
     width: 25%;    
     z-index: 0;
 }
