--- a/styles/index.css
+++ b/styles/index.css
@@ -56,15 +56,16 @@ header{
 }
 
 .hamb-menu-win{    
+    animation-name: fade-in;
+    animation-duration: 0.5s;
     display: none;
     position: fixed;
-    top: 95px;
+    top: 99px;
     left: -2px;
     width: 270px;
-    border: var(--gray) 2px solid;
     background-color: var(--black);
-    height: 450px;
-
+    height: 425px;
+    opacity: 0.95;
 }
 
 .hamb-menu-win .blur-logo-container{   
@@ -246,6 +247,10 @@ main{
     font-size: var(--font-size-game-text-1);
 }
 
+.preview-list-item a:hover{
+    opacity: 0.8;
+}
+
 .preview-list > form {
     width: 70%;
     margin: 40px auto;
@@ -258,8 +263,8 @@ form > .game-grid-item1{
 
 .preview-list-item > a > img {
     margin: 10px;
-    width: 130px;
-    min-width: 130px;
+    width: 95px;
+    min-width: 95px;
 
 }
 
@@ -332,5 +337,5 @@ footer{
 }
 #footer-links ul{
     list-style-type: none;
-    
+    margin-top: 10px;
 }
