--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 html, body{
     height: 100vh;
     width: 100%;
+    animation-name: fade-in;
+    animation-duration: 0.5s;    
 }
 
 html{
