--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -41,7 +41,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
     justify-content: space-evenly;
 }
 
